  - Indentation is done using whitespaces only, no tabs. Code is indented by
    two whitespaces
  - Two empty lines are put between any two functions
  - In non-empty lists or index expressions, opening '(' and '[' are followed by
    one whitespace, closing ')' and ']' are preceded by one whitespace
  - In comma- or colon-separated argument lists, one whitespace is put after
    each comma/colon
  - Names of functions and global variables all start with a benchmark-specific
    prefix (here: bs_) followed by lowercase letter (e.g., bs_square)
  - For pointer types, one whitespace is put before the '*'
  - Operators within expressions shall be preceded and followed by one
    whitespace
  - Code of then- and else-parts of if-then-else statements shall be put in
    separate lines, not in the same lines as the if-condition or the keyword
    "else"
  - Opening braces '{' denoting the beginning of code for some if-else or loop
    body shall be put at the end of the same line where the keywords "if",
    "else", "for", "while" etc. occur
  - In non-empty lists or index expressions, opening '(' and '[' are followed by
    one whitespace, closing ')' and ']' are preceded by one whitespace
  - Operators within expressions shall be preceded and followed by one
    whitespace

2016-02-03:
- Removed all PROFILINGs.
- Macro types replaced by actual types:
  - Replaced INT32 with int.
  - Replaced DCTELEM with int.
- Removed macros:
  - GLOBAL (useless)
  - Unused "FIX_... FIX(..)" definitions (unused)
  - BITS_IN_JSAMPLE (used in #ifdef...#else..., keep only #if part)
  - SHIFT_TEMPS (empty)
  - JPEG_INTERNALS (unused)
  - MULTIPLY (simply multiply *)
  - ONE (used only once)
  - RIGHT_SHIFT (used only once)
  
2016-04-05:
- Return '0' on success

2016-04-06:
- Fixed generation of return value

2016-04-21:
- Fixed checksum value
- Fixed license

2016-06-01:
- Changed all prefixes to lower-case
- Changed return type of jfdctint_main